# defn-research

./: .cljfmt.edn  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLOJURE_COMPLIANCE_REPORT.md  Dockerfile  Dockerfile.test  LICENSE  README.md  deps.edn  entrypoint.sh  project.clj  pyproject.toml  tests.edn
.clj-kondo/: config.edn
.githooks/: pre-commit
.github/workflows/: ci.yml
baseline-research/: brief-parallel.edn  input-parallel.md  response-parallel.json
docs/: python-deps-audit.md
resources/: cover.json  style.css
resources/cover/: generation_process.edn  parts.edn  quality_requirements.edn  style_definition.edn
resources/prompts/: xai-section.edn
src/: __init__.py  main.py
src/api/: __init__.py  client.py  research.py  response.py  valyu.py
src/domain/: __init__.py  pending.py  result.py  session.py  task.py
src/image/: __init__.py  generator.py
src/pdf/: __init__.py  document.py  palette.py  style.py  wave.py
src/research/: config.clj  main.clj
src/research/api/: http.clj  link.clj  parallel.clj  progress.clj  (+4 more)
src/storage/: __init__.py  file.py  organizer.py  repository.py
test/research/: main_test.clj
tests/api/: test_client.py  test_research.py  test_response.py  test_valyu.py
tests/docker/: __init__.py  test_dockerfile.py
tests/domain/: test_pending.py  test_result.py  test_session.py  test_task.py
tests/main/: test_main.py
tests/pdf/: __init__.py  test_document.py  test_palette.py  test_style.py  test_wave.py
tests/storage/: test_file.py  test_organizer.py  test_repository.py
(+80 files in other folders)
